--- a/public/static/ais_dom/intro/css/sprite_60fps.css
+++ b/public/static/ais_dom/intro/css/sprite_60fps.css
@@ -19,8 +19,8 @@
 }
 
 body {
-    background: #fff;
-    font-family: sans-serif;
+  background: #fff;
+  font-family: sans-serif;
 }
 
 div.center {
@@ -29,46 +29,46 @@ div.center {
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  text-align:center;
+  text-align: center;
   width: 100%;
 }
 
 div.aisdom {
-    font-weight: bold;
-    font-size: 16vw;;
+  font-weight: bold;
+  font-size: 16vw;
 }
 
 @keyframes blink {
-    0% {
-      opacity: .2;
-    }
-    20% {
-      opacity: 1;
-    }
-    100% {
-      opacity: .2;
-    }
+  0% {
+    opacity: 0.2;
+  }
+  20% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.2;
+  }
 }
 
-p.loading{
-    font-size: 8vw;
-    margin: 5px;
+p.loading {
+  font-size: 8vw;
+  margin: 5px;
 }
 .loading span {
-    animation-name: blink;
-    animation-duration: 1.4s;
-    animation-iteration-count: infinite;
-    animation-fill-mode: both;
+  animation-name: blink;
+  animation-duration: 1.4s;
+  animation-iteration-count: infinite;
+  animation-fill-mode: both;
 }
 
 .loading span:nth-child(2) {
-    animation-delay: .2s;
+  animation-delay: 0.2s;
 }
 
 .loading span:nth-child(3) {
-    animation-delay: .4s;
+  animation-delay: 0.4s;
 }
 
-footer{
-    width: 100%;
+footer {
+  width: 100%;
 }
